--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.0.0</version>
+				<artifactId>maven-ear-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
